<resources>
    <string name="app_name">Langgan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="connection_not_available">Connection is not available</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="inbox">Inbox</string>
    <string name="account">Account</string>
    <string name="empty_result">Data is empty</string>
    <string name="descriptions">Descriptions</string>
    <string name="product_near_by">Product near by</string>
    <string name="try_groceries">Try Groceries</string>
    <string name="plan">Plan</string>
    <string name="your_delivery_plan">Your Delivery Plan</string>
    <string name="notifications">Notifications</string>
    <string name="store">Store</string>
    <string name="close">Close</string>
    <string name="product_name">Product name</string>
    <string name="sku">SKU</string>
    <string name="price">Price</string>
    <string name="photos">Photos</string>
    <string name="add_photo">Add photo</string>
    <string name="brand">Brand</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_messages">Are you sure to delete <b>%1$s</b> ?</string>
    <string name="products">Products</string>
    <string name="box">Box</string>
    <string name="box_name">Box name</string>
    <string name="add_products">Add products</string>
    <string name="select_product">Select products</string>
    <string name="profile">Profile</string>
    <string name="view_and_edit_profile">View and edit profile</string>
    <string name="become_a_seller">Become a seller</string>
    <string name="list_your_product">List your products</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite friends</string>
    <string name="refer_a_seller">Refer a seller</string>
    <string name="get_help">Get help</string>
    <string name="give_us_feedback">Give us feedback</string>
    <string name="logout">Logout</string>
</resources>
