<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/favorite_menu"
        android:icon="@drawable/ic_heart"
        android:title="@string/favorite" />

    <item
        android:id="@+id/subscriptions_menu"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/plan" />

    <item
        android:id="@+id/inbox_menu"
        android:icon="@drawable/ic_message_circle"
        android:title="@string/inbox" />

    <item
        android:id="@+id/account_menu"
        android:icon="@drawable/ic_more_horizontal"
        android:title="@string/account" />
</menu>