<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="id.langgan.android.model.Box" />

        <import type="java.util.List" />

        <import type="id.langgan.android.model.Product" />

        <variable
            name="box"
            type="Box" />

        <variable
            name="products"
            type="List&lt;Product>" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.FormBoxActivity">

        <LinearLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_close"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/delete"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toStartOf="@id/save"
                    android:layout_toLeftOf="@id/save"
                    android:src="@drawable/ic_trash"
                    app:visibleGone="@{box != null}"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:padding="0dp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    app:backgroundTint="@color/theme_blue" />

            </RelativeLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginBottom="12dp"
                android:background="@null"
                android:hint="@string/box_name"
                android:inputType="text"
                android:text="@{box.name}"
                tools:ignore="Autofill" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/container_description"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/action_bar">

            <ImageView
                android:id="@+id/icon_description"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_align_left"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_toEndOf="@+id/icon_description"
                android:layout_toRightOf="@+id/icon_description"
                android:text="@string/descriptions"
                android:textAppearance="@style/TextAppearance.Regular12" />

            <EditText
                android:id="@+id/descriptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/descriptions"
                android:inputType="text"
                android:text="@{box.description}"
                android:textAppearance="@style/TextAppearance.Regular12"
                tools:ignore="Autofill,RelativeOverlap" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_price"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/container_description">

            <ImageView
                android:id="@+id/icon_price"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_dollar_sign"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_toEndOf="@+id/icon_price"
                android:layout_toRightOf="@+id/icon_price"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.Regular12" />

            <EditText
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/price"
                android:inputType="text"
                android:text="@{String.valueOf(box.price)}"
                android:textAppearance="@style/TextAppearance.Regular12"
                tools:ignore="Autofill,RelativeOverlap" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/container_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/container_price">

            <RelativeLayout
                android:id="@+id/container_photo"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_constraintTop_toBottomOf="@+id/container_description">

                <ImageView
                    android:id="@+id/icon_photo"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_image"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_toEndOf="@+id/icon_photo"
                    android:layout_toRightOf="@+id/icon_photo"
                    android:text="@string/products"
                    android:textAppearance="@style/TextAppearance.Regular12" />

                <TextView
                    android:id="@+id/add_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/add_products"
                    android:textAppearance="@style/TextAppearance.Regular12"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_add_product" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>